# secure-comm-latency-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: example_experiment.yaml
data/raw/: synthetic_example.jsonl
reports/: example_report.md
scripts/: check_dependencies.sh  run_example_experiment.sh  setup_netem.sh  setup_wireguard_lab.sh  teardown_netem.sh
src/secure_comm_latency_lab/: __init__.py  cli.py  config.py  models.py
src/secure_comm_latency_lab/analysis/: __init__.py  plots.py  report.py  summarize.py
src/secure_comm_latency_lab/measurements/: __init__.py  http_timing.py  iperf.py  ping.py  traceroute.py
src/secure_comm_latency_lab/runners/: __init__.py  base.py  direct.py  tor.py  wireguard.py
src/secure_comm_latency_lab/utils/: __init__.py  commands.py  logging.py  time.py
tests/: test_command_safety.py  test_config.py  test_summarize.py
