[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-comm-latency-lab"
version = "0.1.0"
description = "Ethical measurement framework for latency-sensitive secure communication paths."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Secure Communication Latency Lab contributors" }
]
keywords = [
  "wireguard",
  "tor",
  "latency",
  "network-measurement",
  "secure-communication",
  "privacy"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
]
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.0",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "requests[socks]>=2.31",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
tor = [
  "stem>=1.8",
]

[project.urls]
Homepage = "https://github.com/example/secure-comm-latency-lab"
Repository = "https://github.com/example/secure-comm-latency-lab"

[project.scripts]
sclab = "secure_comm_latency_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
